changing  item font size to 16px t0 avoid zoom on ios

--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -10,7 +10,7 @@
     resize: none;
     border: none;
     outline:none;
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .delete-button{
